--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.2.16",
-    "@angular/common": "12.2.16",
-    "@angular/compiler": "12.2.16",
-    "@angular/core": "12.2.16",
-    "@angular/forms": "12.2.16",
-    "@angular/platform-browser": "12.2.16",
-    "@angular/platform-browser-dynamic": "12.2.16",
-    "@angular/router": "12.2.16",
-    "@popperjs/core": "2.11.5",
-    "bootstrap": "5.1.3",
-    "bootstrap-icons": "1.8.3",
-    "ngx-spinner": "^10.0.1",
-    "ngx-toastr": "14.3.0",
-    "rxjs": "7.5.5",
-    "tslib": "2.4.0",
-    "zone.js": "0.11.6"
+    "@angular/animations": "^14.0.2",
+    "@angular/common": "^14.0.2",
+    "@angular/compiler": "^14.0.2",
+    "@angular/core": "^14.0.2",
+    "@angular/forms": "^14.0.2",
+    "@angular/platform-browser": "^14.0.2",
+    "@angular/platform-browser-dynamic": "^14.0.2",
+    "@angular/router": "^14.0.2",
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
+    "ngx-spinner": "^13.1.1",
+    "ngx-toastr": "^15.0.0",
+    "rxjs": "^7.5.5",
+    "tslib": "^2.4.0",
+    "zone.js": "^0.11.6"
   },
   "scripts": {
     "ng": "ng",
